Minor edit to proof method in intro.

--- a/main.tex
+++ b/main.tex
@@ -117,7 +117,7 @@ p(\beta) = \beta^2 - F'(0)
 with roots \(\beta_{\pm} = \pm \sqrt{F'(0)}\). Degree one harmonic map heat flow has \(\beta_+ = 1\) and blow up occurs. More generally, degree \(\ell\) harmonic map heat flow has \(\beta_+ = \ell\) which does not blow up for \(\ell \geq 2\) and finally, Yang-Mills has \(\beta_+ = 2\) once more without blow up.
 \end{rem}
 
-The method of proof as has been used by many authors \cite{MR2332425,MR1180392} proceeds by suitable construction of sub and super solutions either forcing or preventing blow up. These are obtained from one-parameter families of stationary solutions \(\xi = \xi_{\lambda}\) satisfying \(L(\xi) = -\tfrac{1}{r^2} \bar{F} (\xi)\) and \(\xi(0) = 0\). Since \(L\) is second order, this leaves the free parameter \(\lambda\) specifying \(\xi'(0)\). By allowing this parameter to depend on \(t\) in just the right way, we obtain the desired sub and super solutions, \(\xi_{\lambda(t)} (r)\).
+The method of proof - as used by many authors \cite{MR2332425,MR1180392} - proceeds by suitable construction of sub and super solutions either forcing or preventing blow up. These are obtained from one-parameter families of stationary solutions \(\xi = \xi_{\lambda}\) satisfying \(L(\xi) = -\tfrac{1}{r^2} \bar{F} (\xi)\) and \(\xi(0) = 0\). Since \(L\) is second order, this leaves the free parameter \(\lambda\) specifying \(\xi'(0)\). By allowing this parameter to depend on \(t\) in just the right way, we obtain the desired sub and super solutions, \(\xi_{\lambda(t)} (r)\). Blow up then occurs (or not) according to the variation of \(\xi\) with respect to \(\lambda\) and whether \(\lambda\) blows up in finite time or not.
 
 The reason the linearised operator \(L\) determines blow up is because of standard local, parabolic estimates that show blow up, if it occurs, must occur at the pole \(r = 0\) (see Lemma \ref{lem:apriori_bounds}) coupled with the assumptions on \(F\) ensuring that \(\bar{F} = \mathcal{O}(\psi^{1+\alpha})\). Thus the linearisation \(F'(0)\) dominates as \(\psi \to 0\) which connects with the local estimates through boundary condition \(\psi(0) = 0\). Of course, there are technicalities encountered (as seen for instance in the \(L_{\infty}\) bounds of the main theorem \ref{thm:main}) and these will be expanded upon below.
 
