Wrote explicitly how L factors in the general C case.

--- a/StandardPaper2.tex
+++ b/StandardPaper2.tex
@@ -105,6 +105,7 @@
 
 \DeclareMathOperator{\dive}{div}
 \DeclareMathOperator{\id}{id}
+\DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\pr}{pr}
 \DeclareMathOperator{\Diff}{Diff}
 \DeclareMathOperator{\supp}{supp}
