--- a/main.tex
+++ b/main.tex
@@ -336,49 +336,65 @@ G = \ell^2 u^2.
 \subsubsection*{Stationary solutions for arbitrary \(C\)}
 
 In this case, we don't have the same integrability structure as with \(C = 1\). However, we can still solve (somewhat less explicitly) by factoring \(L\) as the composition of two first order differential operators. That is we define
-\[
-L_+ = \partial_r - \frac{\beta^+ - 1}{r}, \quad L_- = \partial_r - \frac{\beta^-}{r}
-\]
-giving
-\[
-L = L_+ \circ L_-.
-\]
-This follows since \(\beta^{\pm}\) are the roots of the characteristic equation,
+\begin{align*}
+L_+ &= \partial_r - \frac{\beta^+ - 1}{r} = r^{\beta_+ - 1} \partial_r (r^{-(\beta_+ - 1)} \cdot) , \\
+L_- &= \partial_r - \frac{\beta^-}{r} = r^{\beta_-} \partial_r (r^{-\beta_-} \cdot).
+\end{align*}
+Since \(\beta^{\pm}\) are the roots of the characteristic equation,
 \[
 \beta^2 + (C - 1) \beta - F'(0) = 0
 \]
-and hence
+we have
 \[
-\beta^+ + \beta^- = C-1, \quad \beta^+ \beta^- = F'(0)
+- \beta^+ - \beta^- = C-1, \quad \beta^+ \beta^- = -F'(0).
 \]
-and since in the composition \(L+ \circ L_-\), there is an additional term from \(L_+\) acting on the \(1/r\) coefficient in \(L_-\).
-
-
-\begin{rem}
-Alternatively, we could define
+Therefore,
 \[
-L_+ = \partial_r - \frac{\beta^+}{r}, \quad L_- = \partial_r - \frac{\beta^- - 1}{r}
+L_+ \circ L_- = \partial_r^2 + \frac{-(\beta_+ - 1) -\beta_1}{r} + \frac{\beta_+ \beta_-}{r^2} = L.
 \]
-in which case,
-\[
-L = L_- \circ L_+.
-\]
-It makes no difference which we choose, and so we prefer the first choice, \(L = L_+ \circ L_-\).
-\end{rem}
 
 Then our stationary solution satisfies
 \[
-L_+ \circ L_- \xi = \frac{1}{r^2} F(\xi)
+L_+ \circ L_- \xi = \frac{1}{r^2} \bar{F}(\xi)
 \]
-so that
+or equivalently
 \[
-\xi = L_-^{-1} \circ L_+^{-1} (\frac{1}{r^2} F(\xi)).
+\xi = L_-^{-1} \circ L_+^{-1} \left(\frac{1}{r^2} \bar{F}(\xi)\right).
 \]
-Note that \(L_{\pm}\) being first order, linear differential operators have non-unique left inverses, determined up to arbitrary constants. The condition \(\xi(0) = 0\) determines one constant, while the other is determined by \(\psi'(0)\) which provides us with the free parameter \(\lambda = \psi'(0)\).
+where \(L_-^{-1}, L_+^{-1}\) are any left inverses. Note that \(L_{\pm}\) being first order, linear differential operators have non-unique left inverses, determined up to arbitrary constants \(C_{\pm}\). Explicitly,
+\begin{align*}
+L_+^{-1} (\varphi) &= r^{\beta_+ - 1} \int r^{-(\beta_+ - 1)} \varphi(r) dr + C_+ r^{\beta_+-1}, \\
+L_-^{-1} (\varphi) &= r^{\beta_-} \int r^{-\beta_-} \varphi(r) dr + C_- r^{\beta_-}
+\end{align*}
+and hence
+\begin{equation}
+\label{eq:}
+\begin{split}
+\xi &= r^{\beta_-} \int \left[\rho^{-\beta_-} L_+^{-1} \left(\frac{1}{\rho^2} \bar{F}(\xi)\right)\right] d\rho + C_- r^{\beta_-} \\
+&= r^{\beta_-} \int \left[\rho^{-\beta_-} \rho^{\beta_+ - 1} \int \left(\tau^{-(\beta_+ - 1)} \frac{1}{\tau^2} \bar{F}(\xi) \right)d\tau + \rho^{-\beta_-} C_+ \rho^{\beta_+-1}\right] d\rho + C_- r^{\beta_-} \\
+&= r^{\beta_-} \int \left[\rho^{\beta_+ - \beta_- - 1} \int \left(\tau^{-(\beta_+ + 1)} \bar{F}(\xi) \right)d\tau\right] d\rho + \frac{C_+}{\beta_+ - \beta_-} r^{\beta_+} + C_- r^{-\beta_-}.
+\end{split}
+\end{equation}
+Letting
+\[
+G(\varphi) = r^{\beta_-} \int \left[\rho^{\beta_+ - \beta_- - 1} \int \left(\tau^{-(\beta_+ + 1)} \bar{F}(\varphi) \right)d\tau\right] d\rho
+\]
+and absorbing \(\tfrac{1}{\beta_+ - \beta_1}\) into \(C_+\), we have
+\[
+(\Id - G) (\xi) = C_+ r^{\beta_+} + C_- r^{\beta_-}.
+\]
 
-\textbf{Write it down explicitly and determine how the free parameters occur}.
+Formally then, we obtain the representation formula,
+\[
+\xi = (\Id - G)^{-1} \left(C_+ r^{\beta_+} + C_- r^{\beta_-}\right).
+\]
+Note that in the case \(\bar{F} = 0\) we have \(G = 0\) and as expected, we recover the general solution to the linearised equation \(L(\xi) = 0\).
 
-\textbf{Work out asymptotics and free parameter dependence which is very important for the construction of barriers}.
+\textbf{We now need a contraction mapping to assert the existence of an inverse}.
+
+\textbf{We also need to determine how the solutions vary with respect to the free parameters which is needed for barrier construction}.
+
+\textbf{Work out asymptotics as \(r\to 0\) which is important for barrier construction}.
 
 \section{Blow up}
 
