Removed 'Yang-Mills' from title.

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 \title[]
- {Blow up of equivariant harmonic map heat flow and Yang Mills flow}
+ {Blow up of equivariant harmonic map heat flow}
 
 \curraddr{}
 \email{}
