General refining and cleaning up.

--- a/local_definitions.tex
+++ b/local_definitions.tex
@@ -1,2 +1,4 @@
 \DeclareMathOperator{\E}{\mathcal{E}}
 \DeclareMathOperator{\bigo}{\mathcal{O}}
+\declaretheorem[name=Main Theorem]{mainthm}
+\crefname{mainthm}{Main Theorem}{Main Theorems}
